removing books from read books functionality changed, z-index bug with icons and transform fixed

--- a/src/components/Layout/Navigation.module.css
+++ b/src/components/Layout/Navigation.module.css
@@ -10,6 +10,7 @@
   align-items: center;
   padding: 0 5%;
   justify-content: space-between;
+  z-index: 1;
 }
 
 .navigation {
