--- a/src/pages/PageNotFound.module.css
+++ b/src/pages/PageNotFound.module.css
@@ -28,7 +28,7 @@
   width: 80%;
   display: flex;
   flex-direction: column;
-  background-color: rgba(238, 226, 220, 0.45);
+  background-color: rgba(238, 226, 220, 0.5);
   border-radius: 15px;
   padding: 1rem;
   font-weight: bold;
@@ -42,7 +42,7 @@
 .button {
   cursor: pointer;
   border: none;
-  padding: 0.3rem;
+  padding: 0.4rem;
   border-radius: 15px;
   color: var(--secondary);
   width: 12rem;
@@ -52,10 +52,10 @@
   right: 5%;
   background-color: var(--primary);
   color: var(--light);
+  font-family: inherit;
 }
 
 .button:hover,
-.button:focus,
 .button:active {
   color: var(--secondary);
 }
